force-app/main/default/objects/Stay__c/Stay__c.object-meta.xml
<CustomObject>
    <description>Junction object between booking and Person account (Account object)</description>
    <label>Stay</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Stay Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>