force-app/main/default/objects/Stay__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <label>Booking</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordType.Id</field>
            <operation>equals</operation>
            <value>0120Y000000R4WJ</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Guest Account</relationshipLabel>
    <relationshipName>Stays</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>