force-app/main/default/objects/Stay__c/fields/Guest_account__c.field-meta.xml
<CustomField>
    <fullName>Guest_account__c</fullName>
    <label>Guest account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Guest Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Stays</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>