force-app/main/default/objects/Stay__c/fields/Hotel_Id__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Id__c</fullName>
    <formula>Booking__r.Hotel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel Id</label>
    <type>Text</type>
</CustomField>