force-app/main/default/objects/Stay__c/fields/Max_Departure__c.field-meta.xml
<CustomField>
    <fullName>Max_Departure__c</fullName>
    <formula>Booking__r.Max_Departure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Departure</label>
    <type>Date</type>
</CustomField>