force-app/main/default/objects/Stay__c/fields/Min_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Min_Arrival__c</fullName>
    <formula>Booking__r.Min_Arrival__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min Arrival</label>
    <type>Date</type>
</CustomField>