force-app/main/default/objects/Stay__c/fields/PersonContactID__c.field-meta.xml
<CustomField>
    <fullName>PersonContactID__c</fullName>
    <formula>CASESAFEID(Guest_account__r.PersonContactId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PersonContactID</label>
    <type>Text</type>
</CustomField>