force-app/main/default/objects/Stay__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <formula>TEXT(Booking__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StageName</label>
    <type>Text</type>
</CustomField>