force-app/main/default/objects/Stay__c/fields/Trip_Context__c.field-meta.xml
<CustomField>
    <fullName>Trip_Context__c</fullName>
    <formula>Booking__r.Trip_Context__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trip Context</label>
    <type>Text</type>
</CustomField>