force-app/main/default/objects/Stay__c/fields/UniqueStay__c.field-meta.xml
<CustomField>
    <fullName>UniqueStay__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Booking or Guest Account</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>