force-app/main/default/objects/Stay__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>Guest_account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>